# cmake_test

./: .gitignore  CMakeCache.txt  CMakeLists.txt  main.c
inc/: f.h
lib/: CMakeLists.txt  lib.c  lib.h
lib/lwrb/: cmake_install.cmake
lib/lwrb/src/include/lwrb/: lwrb.h
lib/lwshell/: cmake_install.cmake
src/: f.c  g.c  main.c  main.cpp
